cmake_minimum_required (VERSION 2.6)
project(renders)
set(SRC_LIST src/main.cpp)
add_executable(renders ${SRC_LIST})
add_subdirectory(include)
target_link_libraries(renders opengl32)
target_link_libraries(renders glu32)
target_link_libraries(renders raytracing)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)